--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>Digital Watch</h1>
     <div id="box">
          <!-- <h1>HELLO</h1> -->
     </div>
